manifest/ingress_controller/ingressClass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: default
  annotations:
    nginx.org/ingress-controller: "true"
spec:
  controller: nginx.org/ingress-controller
