manifest/ingress_controller/nginx-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ascent-ingress-controller
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ascent-ingress
  template:
    metadata:
      labels:
        app: ascent-ingress
    spec:
      serviceAccountName: ascent-ingress
      containers:
      - name: ascent-ingress-controller
        image: nginx/nginx-ingress:latest
        args:
          - /ascent-ingress-controller
          - --election-id=ingress-controller-leader
          - --ingress-class=nginx-custom
          - --configmap=ascent-ingress/nginx-configuration
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
