manifest/ingress_controller/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ascent-ingress
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: ascent-ingress 
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
