manifest/ingress_controller/ingressService.yml
apiVersion: v1
kind: Service
metadata:
  name: ascent-ingress
  namespace: default
spec:
  type: LoadBalancer
  selector:
    name: nginx-ingress-controller
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
